# literature-analysis

./: .gitignore  .scopus.dir  CONTRIBUTING.md  README.md  citation.html  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
analysis/: bibliography.py
analysis/data/: ieee.csv
listudy/: bibliography.py
listudy/data/: ieee.csv
litstudy/: bibliography.py
litstudy/data/: springer.csv  zotero.bib
tests/: test_basic.py
