[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-analysis"
version = "1.1.1"
description = "A Python-based toolset for automated bibliometric analysis."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Mozilla Public License 2.0 (MPL 2.0)"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "litstudy",
    "matplotlib",
    "seaborn",
    "networkx",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "pre-commit"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
